Add boostrap to popup.

--- a/app/popup.html
+++ b/app/popup.html
@@ -7,6 +7,7 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <!-- endbuild -->
     </head>
@@ -19,6 +20,8 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/popup.js -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="scripts/popup.js"></script>
         <!-- endbuild -->
     </body>
