--- a/app/options.html
+++ b/app/options.html
@@ -6,24 +6,29 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <!-- endbuild -->
     </head>
     <body>
         <div id="container" class="container">
-            <h3>TabCommender settings</h3>
+            <div class="page-header">
+                <h3>TabRec settings</h3>
+            </div>
 
             <form role="form">
                 <div class="form-group">
-                    <label for="user-level-select">User level</label>
-                    <select class="form-control" id="user-level-select">
-                        <option>Beginner</option>
-                        <option>Advanced</option>
-                        <option>Expert</option>
-                    </select>
+                    <label for="user-level-select" class="col-sm-2 control-label">User level</label>
+                    <div class="col-sm-10">
+                        <select class="form-control" id="user-level-select">
+                            <option>Beginner</option>
+                            <option>Advanced</option>
+                            <option>Expert</option>
+                        </select>
+                    </div>
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-lg">Save</button>
+                <button type="submit" class="btn btn-primary">Save settings</button>
             </form>
         </div>
 
@@ -33,6 +38,8 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/options.js -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="scripts/options.js"></script>
         <!-- endbuild -->
     </body>
