--- a/app/options.html
+++ b/app/options.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Save settings</button>
+                <button type="submit" id="save-options" class="btn btn-primary">Save settings</button>
             </form>
         </div>
 
