--- a/app/popup.html
+++ b/app/popup.html
@@ -3,25 +3,32 @@
     <head>
         <meta charset="utf-8">
         <!-- build:css styles/vendor.css -->
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
-        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
+        <link href="styles/popup.css" rel="stylesheet">
         <!-- endbuild -->
     </head>
     <body>
-        <h3>TabRec</h3>
+        <div class="page-header">
+            <h4>TabRec status</h4>
+        </div>
+
+        <input type="checkbox" id="tabrec-status">
+            <label for="tabrec-status">Real-time recommendation</label>
+        </input>
 
         <!-- build:js scripts/vendor.js -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <!-- bower:js -->
         <!-- endbower -->
         <!-- endbuild -->
 
         <!-- build:js scripts/popup.js -->
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="scripts/popup.js"></script>
         <!-- endbuild -->
     </body>
