Add sass styles.

--- a/options.html
+++ b/options.html
@@ -1,14 +1,9 @@
 <!doctype html>
 <html>
     <head>
-        <!-- build:css styles/vendor.css -->
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <!-- bower:css -->
-        <!-- endbower -->
-        <!-- endbuild -->
-        <!-- build:css styles/main.css -->
         <link href="styles/main.css" rel="stylesheet">
-        <!-- endbuild -->
+        <link href="styles/options.css" rel="stylesheet">
     </head>
     <body>
         <div id="container" class="container">
@@ -32,15 +27,8 @@
             </form>
         </div>
 
-        <!-- build:js scripts/vendor.js -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- bower:js -->
-        <!-- endbower -->
-        <!-- endbuild -->
-
-        <!-- build:js scripts/options.js -->
         <script src="scripts/options.js"></script>
-        <!-- endbuild -->
     </body>
 </html>
