Save is now showing sweetalert confim box.

--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
     <head>
         <!-- CSS includes -->
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bower_components/sweetalert/lib/sweet-alert.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/options.css" rel="stylesheet">
     </head>
@@ -70,13 +71,14 @@
                     <button type="submit" id="save-settings" class="btn btn-primary">Save settings</button>
                 </div>
                 <div class="pull-left">
-                    <button type="submit" id="reset-settings" class="btn btn-danger">Reset settings</button>
+                    <button type="submit" id="reset-settings" class="btn btn-danger">Restore defaults</button>
                 </div>
             </div>
         </div>
         <!-- JS includes -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="bower_components/sweetalert/lib/sweet-alert.min.js"></script>
         <script src="scripts/options.js"></script>
     </body>
 </html>
