Add new option (other_plugins).

--- a/options.html
+++ b/options.html
@@ -31,6 +31,18 @@
                         </select>
                     </div>
                 </div>
+
+                <section id="cb-text">
+                    Please, check the following box if You are already using some other extensions for managing
+                    browser tabs. If You don't use other extensions, leave the box unchecked.
+                </section>
+
+                <div class="form-group">
+                    <label for="other-plugins-checkbox" class="col-sm-2 control-label">Another extensions?</label>
+                    <div class="col-sm-10">
+                        <input type="checkbox" id="other-plugins-cb">
+                    </div>
+                </div>
             </form>
 
             <h4>2. Choose the default recommendation mode.</h4>
