Update popup last week label.

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
 
         <div id="container" class="container">
 
-            <h4>This week</h4>
+            <h4>Last 7 days</h4>
 
             <div id="weekly-tab-stats">
                 <ul>
