Add cdn css/js versions comment to html views.

--- a/options.html
+++ b/options.html
@@ -6,6 +6,9 @@
         <link href="bower_components/sweetalert/lib/sweet-alert.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/options.css" rel="stylesheet">
+        <!-- CDNified -->
+        <!-- <link href="//cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.css" rel="stylesheet"> -->
+        <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"> -->
     </head>
     <body>
         <div class="container">
@@ -92,5 +95,8 @@
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/sweetalert/lib/sweet-alert.min.js"></script>
         <script src="scripts/options.js"></script>
+        <!-- CDNified -->
+        <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
+        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.js"></script> -->
     </body>
 </html>
