Make boostrap and sweetaltert loading via CDN :smile:

--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/popup.css" rel="stylesheet">
-        <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"> -->
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <div id="header" class="page-header">
@@ -39,9 +38,10 @@
             <span id="settings-text">Settings</span>
         </footer>
 
+        <!-- JS includes -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="scripts/constants.js"></script>
         <script src="scripts/popup.js"></script>
-        <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     </body>
 </html>
