--- a/options.html
+++ b/options.html
@@ -2,13 +2,10 @@
 <html>
     <head>
         <!-- CSS includes -->
-        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="bower_components/sweetalert/lib/sweet-alert.css" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/options.css" rel="stylesheet">
-        <!-- CDNified -->
-        <!-- <link href="//cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.css" rel="stylesheet"> -->
-        <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"> -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -92,11 +89,9 @@
         </div>
         <!-- JS includes -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="bower_components/sweetalert/lib/sweet-alert.min.js"></script>
+        <script src="scripts/constants.js"></script>
         <script src="scripts/options.js"></script>
-        <!-- CDNified -->
-        <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
-        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.js"></script> -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.js"></script>
     </body>
 </html>
