Update options page text, change default values to advanced and semi-interactive.

--- a/options.html
+++ b/options.html
@@ -11,14 +11,13 @@
         <div class="container">
             <div class="page-header">
                 <h3><b>TabRec</b> settings</h3>
-                <footer id="footer-text">Tab actions recommender for Google Chrome</footer>
+                <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
             </div>
 
-            <h4>1. Choose Your experience level.</h4>
+            <h4>1. Experience and other extensions</h4>
             <section id="exp-level-text">
-                To provide the most accurate recommendation, we need to know how you use the browser.
-                In select box below, select the option which You think describes the most Your experience
-                in browser usage.
+                In select box below, choose the option you think describes the best your browser
+                usage experience.
             </section>
             <form role="form">
                 <div class="form-group">
@@ -33,8 +32,8 @@
                 </div>
 
                 <section id="cb-text">
-                    Please, check the following box if You are already using some other extensions for managing
-                    browser tabs. If You don't use other extensions, leave the box unchecked.
+                    Check the following box if you are already using some other extensions for managing
+                    browser tabs. If you don't, leave the box unchecked.
                 </section>
 
                 <div class="form-group">
@@ -45,24 +44,24 @@
                 </div>
             </form>
 
-            <h4>2. Choose the default recommendation mode.</h4>
+            <h4>2. Default recommendation mode</h4>
             <ul>
                 <li>
-                    The <b>Interactive</b> mode means that You will always have
-                    to choose if You want or do not want to execute recommended action.
+                    The <b>Interactive</b> mode means, you will always have
+                    to accept or reject recommended action.
                 </li>
                 <li>
-                    The <b>Semi interactive</b> mode will give You a chance to stop the execution of
-                    recommendation (for about 2 seconds). Otherwise it will execute the recommendation.
+                    The <b>Semi interactive</b> mode will give you a chance to stop the execution of
+                    recommendation (for about 2 seconds). Otherwise it will execute it.
                 </li>
                 <li>
-                    <b>Aggressive</b> mode enables us to execute the recommended action without Your approval.
-                    This options provides best user-experience when working correctly.
+                    <b>Aggressive</b> mode enables us to execute the recommended action without your approval.
+                    When working correctly, this options provides the best user-experience.
                 </li>
             </ul>
             <section>
-                We recommend to set the <b>Semi-interactive</b> mode first and later (when more data about Your
-                browser usage will be available to this extension) use the aggressive mode.
+                We recommend to set the <b>Semi-interactive</b> mode first and later (when more data about your
+                browser usage will be available for this extension) use the aggressive mode.
             </section>
             <form role="form">
                 <div class="form-group">
