Updated changelog for 0.8.0

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -9,29 +9,35 @@
 </head>
 <body>
 <h2 id="tabrec-changelog">TabRec changelog</h2>
-<h2 id="section">0.7.3</h2>
+<h2 id="section">0.8.0</h2>
+<ul>
+<li>First pattern implemented and ready for recommendation (currently only interactive mode is supported).</li>
+<li>More statistics in popup window.</li>
+<li>Changed default values in settings.</li>
+</ul>
+<h2 id="section-1">0.7.3</h2>
 <ul>
 <li>Fix API url due to server changes.</li>
 </ul>
-<h2 id="section-1">0.7.2</h2>
+<h2 id="section-2">0.7.2</h2>
 <ul>
 <li>Replace included self maintained SHA1 script with popular jshashes library.</li>
 </ul>
-<h2 id="section-2">0.7.1</h2>
+<h2 id="section-3">0.7.1</h2>
 <ul>
 <li>Proper user recreation.</li>
 <li>Code refactoring.</li>
 </ul>
-<h2 id="section-3">0.7.0</h2>
+<h2 id="section-4">0.7.0</h2>
 <ul>
 <li>Update to reflect API changes.</li>
 <li>Fix usage logs losting bug.</li>
 </ul>
-<h2 id="section-4">0.6.0</h2>
+<h2 id="section-5">0.6.0</h2>
 <ul>
 <li>Various small fixes.</li>
 </ul>
-<h2 id="section-5">0.5.0</h2>
+<h2 id="section-6">0.5.0</h2>
 <ul>
 <li>Reworked popup window</li>
 <li>Added basic browsing stats</li>
