--- a/options.html
+++ b/options.html
@@ -51,17 +51,13 @@
                     to accept or reject recommended action.
                 </li>
                 <li>
-                    The <b>Semi interactive</b> mode will give you a chance to stop the execution of
-                    recommendation (for about 2 seconds). Otherwise it will execute it.
-                </li>
-                <li>
-                    <b>Aggressive</b> mode enables us to execute the recommended action without your approval.
+                    <b>Automatic</b> mode enables us to execute the recommended action without your approval.
                     When working correctly, this options provides the best user-experience.
                 </li>
             </ul>
             <section>
-                We recommend to set the <b>Semi-interactive</b> mode first and later (when more data about your
-                browser usage will be available for this extension) use the aggressive mode.
+                We recommend to set the <b>interactive</b> mode first and later (when more data about your
+                browser usage will be available for this extension) use the automatic mode.
             </section>
             <form role="form">
                 <div class="form-group">
@@ -69,8 +65,7 @@
                     <div class="col-sm-10">
                         <select class="form-control" id="rec-mode-select">
                             <option value="interactive">Interactive</option>
-                            <option value="semi-interactive">Semi-interactive</option>
-                            <option value="aggressive">Aggressive</option>
+                            <option value="automatic">Automatic</option>
                         </select>
                     </div>
                 </div>
