Get ready for 0.9.0 release.

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,12 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.0</h2>
+      <ul>
+        <li>Add possibility to revert recommended action.</li>
+        <li>Add timout after accepting recommendation to prevent unexpected triggering.</li>
+      </ul>
+
       <h2 id="section">0.8.0</h2>
       <ul>
         <li>First pattern implemented and ready for recommendation (currently only interactive mode is supported).</li>
