--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,12 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.1</h2>
+      <ul>
+        <li>Real-time calculated running average is now used in pattern recognition process.</li>
+        <li>Add prevention to not trigger activate pattern when focusing adjacent tabs (e.g. CTRL-TAB switching).</li>
+      </ul>
+
       <h2 id="section">0.9.0</h2>
       <ul>
         <li>Add possibility to revert recommended action.</li>
