Add reverted actions to popup stats.

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,7 @@
                 <ul>
                     <li>Accepted actions <span class="pull-right" id="recs-accepted"></span></li>
                     <li>Rejected actions <span class="pull-right" id="recs-rejected"></span></li>
+                    <li>Reverted actions <span class="pull-right" id="recs-reverted"></span></li>
                 </ul>
             </div>
 
