Add changes for 0.9.2 to changelog.

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,14 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.2</h2>
+      <ul>
+        <li>Added new version of activate pattern.</li>
+        <li>Improved running average handling.</li>
+        <li>Added reverted action to popup stats.</li>
+        <li>Improved handling of recommended actions execution.</li>
+      </ul>
+
       <h2 id="section">0.9.1</h2>
       <ul>
         <li>Real-time calculated running average is now used in pattern recognition process.</li>
