Fix typo in changelogs.

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -16,7 +16,7 @@
       <ul>
         <li>Added new version of activate pattern.</li>
         <li>Improved running average handling.</li>
-        <li>Added reverted action to popup stats.</li>
+        <li>Added reverted actions to popup stats.</li>
         <li>Improved handling of recommended actions execution.</li>
       </ul>
 
