--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,11 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.3</h2>
+      <ul>
+        <li>Fix broken package. Add missing folder.</li>
+      </ul>
+
       <h2 id="section">0.9.2</h2>
       <ul>
         <li>Added new version of activate pattern.</li>
