--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,12 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.4</h2>
+      <ul>
+        <li>Improve sorting for URLs with subdomains.</li>
+        <li>Fix issue in actions reverting.</li>
+      </ul>
+
       <h2 id="section">0.9.3</h2>
       <ul>
         <li>Fix broken package. Add missing folder.</li>
