Add user id label to right top in settings view.

--- a/options.html
+++ b/options.html
@@ -10,6 +10,9 @@
     <body>
         <div class="container">
             <div class="page-header">
+                <div class="pull-right user-id">
+                    <label>Your ID:</label>&nbsp;<span id="uid"></span>
+                </div>
                 <h3><b>TabRec</b> settings</h3>
                 <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
             </div>
