--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,17 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.5-iitsrc</h2>
+      <ul>
+        <li>Add three new patterns detection with no advice action for detection accuracy evaluation :</li>
+        <ul>
+            <li>refresh pattern (when user update specific tab for content updates),</li>
+            <li>compare pattern (when user compare content of two tabs),</li>
+            <li>multi close pattern (when user finished some task and is closing all related tabs).</li>
+        </ul>
+        <li>Change after recommendation timeout to 10 seconds.</li>
+      </ul>
+
       <h2 id="section">0.9.4</h2>
       <ul>
         <li>Improve sorting for URLs with subdomains.</li>
