Prepare for 0.9.6-iitsrc release.

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,12 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">0.9.6-iitsrc</h2>
+      <ul>
+        <li>Improve rec timeout to be per pattern based.</li>
+        <li>Improve handling of notification body and close button click events.</li>
+      </ul>
+
       <h2 id="section">0.9.5-iitsrc</h2>
       <ul>
         <li>Add three new patterns detection with no advice action for detection accuracy evaluation :</li>
