--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -12,6 +12,13 @@
         <footer id="footer-text">Tab actions recommender based on your browser usage</footer>
       </div>
 
+      <h2 id="section">1.0.0</h2>
+      <ul>
+          <li>Add support for automatic recommendation mode added.</li>
+          <li>Remove refresh pattern due to misbehave in certain situations.</li>
+          <li>Minor fixes and refactoring.</li>
+      </ul>
+
       <h2 id="section">0.9.6-iitsrc</h2>
       <ul>
         <li>Improve rec timeout to be per pattern based.</li>
