--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -14,7 +14,7 @@
 
       <h2 id="section">1.0.0</h2>
       <ul>
-          <li>Add support for automatic recommendation mode added.</li>
+          <li>Add support for automatic recommendation mode.</li>
           <li>Remove refresh pattern due to misbehave in certain situations.</li>
           <li>Minor fixes and refactoring.</li>
       </ul>
